--- a/package.json
+++ b/package.json
@@ -13,5 +13,21 @@
     "mysql": "^2.18.1",
     "requester": "git+https://github.com/thisYogesh/request.git",
     "ws": "^7.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.2.0"
+  },
+  "lint-staged": {
+    "*.js": ["eslint --fix", "prettier --write"],
+    "*.json": ["prettier --write --parser json"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
